Starting the frontend testing with vitest and react testing library

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,3 +12,6 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
+
+
+<!-- Starting the Testin of frontend with react testing library and vitest -->
